# AssistantEngine

./: .gitignore  README.md
CommandEngine/: README.md  pyproject.toml  registry.py
CommandEngine/builder/: aggregator.py  builder.py  config.py  main.py  registry.py  scanner.py  serializator.py  utils.py  validator.py
CommandEngine/builder/schemas/: manifest.schema.json
CommandEngine/modules/_shared/: responses.json  rules.json
CommandEngine/modules/greeting/: manifest.json
CommandEngine/modules/music/: handler.py  manifest.json
CommandEngine/modules/weather/: handler.py  manifest.json
CommandEngine/panel/: app.py  config.py  run.py
CommandEngine/panel/routers/: actions_router.py  modules_router.py
CommandEngine/panel/services/: actions_service.py  modules_service.py  utils.py
CommandEngine/panel/static/: app.js  index.html  style.css
CommandEngine/rasa/: README.md  config.yml  domain.yml
CommandEngine/rasa/actions/: actions.py
CommandEngine/rasa/data/: nlu.yml  rules.yml
CommandEngine/tests/: conftest.py  test_aggregator.py  test_build_e2e.py  test_scanner.py  test_serializator.py  test_utils.py  test_validator.py
